--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -1,23 +1,14 @@
 {
-  "Categories": "Categories",
-  "All documents": "All documents",
-  "Create new category": "Create new category",
-  "Category name": "Name of the new category",
-  "Cancel": "Cancel",
-  "Create": "Create",
-  "See": "View the document",
-  "Rename doc": "Rename the document",
-  "Move doc": "Move the document",
-  "Delete": "Delete the document",
-  "Recovery": "Recovery the document",
-  "Settings": "The Document Interaction panel",
-  "New name": "New title",
-  "Rename": "Rename",
-  "Choose a category": "Choose a category",
-  "Main folder": "Main folder",
-  "Move": "Move",
-  "Basket": "Basket",
-  "Enter a new document name": "Enter a new document name. Numbers and Latin letters are allowed.",
-  "File exist": "A file with that name already exists. Overwrite it?",
-  "File moved": "The file has been moved successfully."
+  "login":"login",
+  "Register":"Register",
+  "Registration":"Register",
+  "EnterLogin": "Enter login",
+  "EnterPassword": "Enter password",
+  "Min2Chars": "Minimum 2 characters",
+  "Min8Chars": "Minimum 8 characters",
+  "FieldRequired": "Field is required",
+  "PasswordsNotMatch": "Passwords do not match",
+  "RepeatPassword":"Repeat your password",
+  "CheckEmail": "Check the correctness of the email address",
+  "EnterEmail":"Enter your email"
 }
