--- a/src/translation/ru.json
+++ b/src/translation/ru.json
@@ -1,26 +1,15 @@
 {
-  "Categories": "Категории",
-  "All documents": "Все документы",
-  "Create category": "Создать новую категорию",
-  "Upload document": "Загрузить новый документ",
-  "Category name": "Название новой категории",
-  "Choose document": "Выберите документ",
-  "Enter a new document name": "Введите новое название документа. Разрешаются цифры и латинские буквы.",
-  "Cancel": "Отмена",
-  "Create": "Создать",
-  "Upload": "Загрузить",
-  "See": "Просмотреть документ",
-  "Rename doc": "Переименовать документ",
-  "Recovery": "Восстановить документ",
-  "Move doc": "Переместить документ",
-  "Delete": "Удалить документ",
-  "Settings": "Панель взаимодействия с документом",
-  "New name": "Новое название",
-  "Rename": "Переименовать",
-  "Choose a category": "Выберите категорию",
-  "Main folder": "Главная папка",
-  "Move": "Переместить",
-  "Basket": "Корзина",
-  "File exist": "Файл с таким именем уже существует. Перезаписать?",
-  "File moved": "Файл успешно перемещён."
+  "Login":"Войти",
+  "Register":"Регистрация",
+  "Registration":"Зарегистрироваться",
+  "EnterLogin": "Введите логин",
+  "EnterPassword": "Введите пароль",
+  "Min2Chars": "Минимум 2 символа",
+  "Min8Chars": "Минимум 8 символов",
+  "FieldRequired": "Поле обязательно для заполнения",
+  "PasswordsNotMatch": "Пароли не совпадают",
+  "RepeatPassword":"Повторите пароль",
+  "CheckEmail": "Проверьте правильность email адреса",
+  "EnterEmail":"Введите email"
+  
 }
