add new Localization

--- a/src/translation/ru.json
+++ b/src/translation/ru.json
@@ -21,7 +21,8 @@
     "th1": "Название",
     "th2": "Автор",
     "th3": "Дата создания",
-    "th4": "Обновление",
+    "th4": "Обновление"
+  },
     "DepartmentTable": {
       "th1": "Название",
       "th2": "Количество сотрудников"
@@ -31,7 +32,14 @@
       "th2": "Роль",
       "th3": "Департамент",
       "th4": "Email"
+    },
+    "FormDepartment": {
+      "newDepartmentPlaceholder": "Название нового департамента",
+      "createButton": "Создать",
+      "noInternetConnection": "Нет подключения к интернету"
+    },
+    "DepartmentPanel": {
+      "title": "Работа с департаментами"
     }
   }
   
-}
