--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -12,8 +12,8 @@
   "CheckEmail": "Check the correctness of the email address",
   "EnterEmail":"Enter your email",
   "Documents":"Documents",
-  "ManagementDocuments": "Document Management!",
-  "ManagementDepartments": "Department Management!",
+  "ManagementDocuments": "Document Management",
+  "ManagementDepartments": "Department Management",
   "DocumentsInReview": "Documents In Review",
   "FunctionsTitle": "Functions",
   "LogOut":"Logout",
@@ -21,7 +21,8 @@
     "th1": "Title",
     "th2": "Author",
     "th3": "Creation Date",
-    "th4": "Last Update",
+    "th4": "Last Update"
+  },
     "DepartmentTable": {
       "th1": "Title",
       "th2": "Number of Employees"
@@ -31,6 +32,13 @@
       "th2": "Role",
       "th3": "Department",
       "th4": "Email"
+    },
+    "FormDepartment": {
+      "newDepartmentPlaceholder": "New department name",
+      "createButton": "Create",
+      "noInternetConnection": "No internet connection"
+    },
+    "DepartmentPanel": {
+      "title": "Working with Departments"
     }
-  }
 }
