--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -61,5 +61,14 @@
       "loadingMessage": "Loading...",
       "plusIconAlt": "Add",
       "trashIconAlt": "Delete"
+    },
+    "DocumentPanel":{
+      "AddDocument":"Add Document"
+    },
+    "DocumentModal":{
+      "UploadFile":"Upload file",
+      "ModalWindow":"Modal window",
+      "DocumentName":"Document name",
+      "AttachFiles":"Attach files"
     }
 }
