--- a/src/translation/ru.json
+++ b/src/translation/ru.json
@@ -106,6 +106,11 @@
       "move": "Переместить",
       "delete": "Удалить",
       "withoutDepartment": "Без департамента"
+    },
+    "NotFoundPage": {
+      "title": "Страница не найдена",
+      "discription": "Пожалуйста, проверьте правильность введенного адреса или вернитесь на главную страницу и повторите попытку позже.",
+      "button": "Главная страница"
     }
   }
   
