--- a/src/translation/ru.json
+++ b/src/translation/ru.json
@@ -66,6 +66,10 @@
       "AddDocument":"Добавить документ",
       "AddApplication":"Добавить голосование"
     },
+    "DocumentTake": {
+      "title": "Документы на рассмотрении",
+      "department": "департамент"
+    },
     "DocumentModal":{
       "UploadFile":"Загрузите файл",
       "ModalWindow":"Модальное окно",
